HallOfFame.css
@charset "utf-8";
/* CSS Document */

@font-face {
    font-family: 'Silkscreen';
    src: url('font/slkscr-webfont.eot');
    src: url('font/slkscr-webfont.eot?#iefix') format('embedded-opentype'),
         url('font/slkscr-webfont.woff') format('woff'),
         url('font/slkscr-webfont.ttf') format('truetype'),
         url('font/slkscr-webfont.svg#SilkscreenNormal') format('svg');
    font-weight: normal;
    font-style: normal;

}

body {
	font-size: 32px;
	font-family: Silkscreen, monospace;
	font-weight: bold;
	color: white;
	background-color: black;
}

img {
	display: block;
    margin-left: auto;
    margin-right: auto;
	margin-bottom: 20px;
	width: 300px;
}

fieldset {
	width: 960px;
	margin: auto;
}

legend {
	font-size: 64px;
	text-shadow: 0 0 25px white, 0 0 5px darkseagreen;
	margin-bottom: 20px;
}

ul {
 	list-style-type: none;
	margin:0;
	padding:0;
	text-shadow: 0 0 15px white;
}

li {
	margin-top: 15px;
	margin-bottom: 15px;
}

#first {
	text-shadow: 0 0 15px lime, 0 0 5px lawngreen;
}

ul.leaders {
    max-width: 40em;
    padding: 0;
    overflow-x: hidden;
    list-style: none}

ul.leaders li:before {
    float: left;
    width: 0;
    white-space: nowrap;
	text-shadow: none;
    content:
 ". . . . . . . . . . . . . . . . . . . . "
 ". . . . . . . . . . . . . . . . . . . . "
 ". . . . . . . . . . . . . . . . . . . . "
 ". . . . . . . . . . . . . . . . . . . . "}

ul.leaders span:first-child {
    padding-right: 0.27em;
    background: black}

ul.leaders span + span {
    float: right;
    padding-left: 0.33em;
    background: black}

p {
	text-align: center;
	text-shadow: 0 0 30px white, 0 0 5px darkseagreen;
}

